--- a/TradeMeBrowse/TradeMeBrowse/UI/Base.lproj/Main.storyboard
+++ b/TradeMeBrowse/TradeMeBrowse/UI/Base.lproj/Main.storyboard
@@ -71,13 +71,72 @@
                     <view key="view" contentMode="scaleToFill" id="OWN-wm-WlQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cEL-AN-BjW">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="30" minimumInteritemSpacing="10" id="XwR-Ab-iYE">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="cEL-AN-BjW" firstAttribute="leading" secondItem="74b-be-3Ui" secondAttribute="leading" id="UUf-Wc-UWi"/>
+                            <constraint firstItem="74b-be-3Ui" firstAttribute="bottom" secondItem="cEL-AN-BjW" secondAttribute="bottom" id="bii-0e-scD"/>
+                            <constraint firstItem="74b-be-3Ui" firstAttribute="trailing" secondItem="cEL-AN-BjW" secondAttribute="trailing" id="laL-7L-Uk4"/>
+                            <constraint firstItem="cEL-AN-BjW" firstAttribute="top" secondItem="74b-be-3Ui" secondAttribute="top" id="zsL-MK-CBB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="74b-be-3Ui"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="cEL-AN-BjW" id="LGg-2L-ssG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qE6-ES-d5w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-106" y="141"/>
+        </scene>
+        <!--Listing View Controller-->
+        <scene sceneID="jiz-cf-uyo">
+            <objects>
+                <viewController storyboardIdentifier="ListingViewController" id="C60-Y2-NuL" customClass="ListingViewController" customModule="TradeMeBrowse" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ve0-ee-CBk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="P2A-wn-Sme">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.074509803920000006" green="0.51764705879999995" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="10" id="m6R-Vn-1Z7">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="P2A-wn-Sme" firstAttribute="top" secondItem="tWD-0k-i8f" secondAttribute="top" id="gLa-tW-4qJ"/>
+                            <constraint firstItem="tWD-0k-i8f" firstAttribute="bottom" secondItem="P2A-wn-Sme" secondAttribute="bottom" id="kVK-ST-o3h"/>
+                            <constraint firstItem="tWD-0k-i8f" firstAttribute="trailing" secondItem="P2A-wn-Sme" secondAttribute="trailing" id="m66-Uj-X5k"/>
+                            <constraint firstItem="P2A-wn-Sme" firstAttribute="leading" secondItem="tWD-0k-i8f" secondAttribute="leading" id="ntN-Pk-b0V"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="tWD-0k-i8f"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="P2A-wn-Sme" id="9vb-2Q-66w"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p4D-W4-jYw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-106" y="835"/>
         </scene>
     </scenes>
 </document>
