--- a/TradeMeBrowse/TradeMeBrowse/UI/CategoryCell.xib
+++ b/TradeMeBrowse/TradeMeBrowse/UI/CategoryCell.xib
@@ -12,31 +12,53 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CategoryCell" customModule="TradeMeBrowse" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="237" height="153"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="MMf-FH-gJ4">
-                    <rect key="frame" x="9" y="0.0" width="219" height="153"/>
-                    <color key="backgroundColor" red="0.074509803920000006" green="0.51764705879999995" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                    <color key="textColor" red="0.97254901959999995" green="0.64705882349999999" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-            </subviews>
-            <color key="backgroundColor" red="0.074509803920000006" green="0.51764705879999995" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="53H-DT-NCv" customClass="CategoryCell" customModule="TradeMeBrowse" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="435" height="152"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                <rect key="frame" x="0.0" y="0.0" width="435" height="152"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5qj-O2-zTb">
+                        <rect key="frame" x="0.0" y="0.0" width="389" height="152"/>
+                        <color key="backgroundColor" red="0.074509803920000006" green="0.51764705879999995" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                        <color key="textColor" red="0.97254901959999995" green="0.64705882349999999" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fei-ya-lPZ">
+                        <rect key="frame" x="389" y="0.0" width="46" height="152"/>
+                        <color key="backgroundColor" red="0.074509803920000006" green="0.51764705879999995" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="46" id="0ao-Xa-VIr"/>
+                        </constraints>
+                        <state key="normal" image="disclosure_arrow"/>
+                        <connections>
+                            <action selector="buttonTapped:" destination="53H-DT-NCv" eventType="touchUpInside" id="RID-zD-dMW"/>
+                        </connections>
+                    </button>
+                </subviews>
+            </view>
             <constraints>
-                <constraint firstItem="MMf-FH-gJ4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="9" id="NjC-pA-21B"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="MMf-FH-gJ4" secondAttribute="trailing" constant="9" id="VaY-HO-lzU"/>
-                <constraint firstItem="MMf-FH-gJ4" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="gPF-VF-wqT"/>
-                <constraint firstItem="MMf-FH-gJ4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="sCn-9D-tg0"/>
+                <constraint firstItem="Fei-ya-lPZ" firstAttribute="top" secondItem="9uu-3j-jjW" secondAttribute="top" id="1R6-pg-arq"/>
+                <constraint firstItem="5qj-O2-zTb" firstAttribute="leading" secondItem="9uu-3j-jjW" secondAttribute="leading" id="5oE-HF-Egb"/>
+                <constraint firstItem="9uu-3j-jjW" firstAttribute="top" secondItem="5qj-O2-zTb" secondAttribute="top" id="I6u-wb-h8z"/>
+                <constraint firstItem="5qj-O2-zTb" firstAttribute="height" secondItem="53H-DT-NCv" secondAttribute="height" id="bjz-WA-T9b"/>
+                <constraint firstItem="Fei-ya-lPZ" firstAttribute="leading" secondItem="5qj-O2-zTb" secondAttribute="trailing" id="dJe-iQ-rvp"/>
+                <constraint firstItem="Fei-ya-lPZ" firstAttribute="height" secondItem="53H-DT-NCv" secondAttribute="height" id="mpN-wv-kEd"/>
+                <constraint firstItem="9uu-3j-jjW" firstAttribute="trailing" secondItem="Fei-ya-lPZ" secondAttribute="trailing" id="yCA-5W-LPN"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <viewLayoutGuide key="safeArea" id="9uu-3j-jjW"/>
+            <size key="customSize" width="435" height="152"/>
             <connections>
-                <outlet property="name" destination="MMf-FH-gJ4" id="drV-OY-Lai"/>
+                <outlet property="buttonWidthConstraint" destination="0ao-Xa-VIr" id="Pk7-nV-aQC"/>
+                <outlet property="disclosureButton" destination="Fei-ya-lPZ" id="p9m-NB-UBx"/>
+                <outlet property="name" destination="5qj-O2-zTb" id="Wgz-Qb-hst"/>
             </connections>
-            <point key="canvasLocation" x="21.600000000000001" y="-76.911544227886068"/>
-        </view>
+            <point key="canvasLocation" x="-685.60000000000002" y="-132.23388305847078"/>
+        </collectionViewCell>
     </objects>
+    <resources>
+        <image name="disclosure_arrow" width="8" height="13"/>
+    </resources>
 </document>
